--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+<img width=""src = "https://upload.wikimedia.org/wikipedia/commons/2/20/Gackt_in_2008%282%29%28cropped%29.jpg">
+<h1>Amritraj Yadav</h1>
+<a href="https://www.linkedin.com/in/amritraj-yadav-979b15285/">
+<section id="skills"><p>Coding,Quick learner,DBMS, Computer Networking</p></section>
+<section id="projects">
+<ul>
+<li>Iot Home Automation</li>
+<li>Library Management</li>
+</ul>
+</section>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
